--- a/stories/assets/scss/_variables-delta.scss
+++ b/stories/assets/scss/_variables-delta.scss
@@ -84,7 +84,7 @@ $mg-hero-overlay-max-width: $mg-width-600;
 $mg-hero-overlay-padding: $mg-spacing-400;
 $mg-color-hero-title: oklch(68.5% 0.169 237.323);
 $mg-color-hero--tertiary: $delta-color-dark; // Dark CTA banner sections
-$mg-color-hero-button-secondary-bg: $delta-color-primary;
+$mg-color-hero-button-secondary-background: $delta-color-primary;
 $mg-color-hero-button-secondary-color: $mg-color-white;
 $mg-border-color-hero-button-secondary: $mg-color-white;
 $mg-spacing-hero-overlay: mg-rem(20) 0;
